[luctus] Added char and exams, updated chat

--- a/luctus_at/scprp.html
+++ b/luctus_at/scprp.html
@@ -180,6 +180,7 @@
                     ["Luctus SCP 966","Slow players by looking at them. LMB to make them sleep, LMB to kill, eat and heal from sleeping players (+Open doors with RMB)","files/scp_966.zip","images/scp_966.mp4"],
                     ["Luctus Activityplan","An activity plan for d-class players","files/luctus_activityplan.zip","images/luctus_activityplan.png"],
                     ["Luctus Code","A small box in the top right showing the current code (red,yellow,green)","files/luctus_code.zip","images/luctus_code.png"],
+                    ["Luctus Exams","Create ingame exams that can e.g. whitelist a player after passing it","files/luctus_exams.zip","images/luctus_exam.png"],
                     ["Luctus SCP Names","A window whenever you change jobs to set your job-name (saves after change)","files/luctus_scp_names.zip","images/luctus_scp_names.png"],
                     ["Luctus Research","An SCPRP addon for researchers to write down notes","files/luctus_research.zip","images/luctus_research.png"],
                     ["Luctus Jobnumbers","Give Jobs a name-prefix with random numbers. Can be set with !setid <name> <number>.","files/luctus_jobnumbers.zip","images/luctus_jobnumbers.png"],
