--- a/luctus_at/darkrp.html
+++ b/luctus_at/darkrp.html
@@ -178,7 +178,8 @@
                     ["Luctus HUD","A simple, fully functional HUD with ammo display and agenda support","files/luctus_hud.zip","images/luctus_hud.png"],
                     ["Luctus Propblacklist","A handpicked 1000+ props blacklist. Contains HL2, Gmod and CSS props that users could use to troll","files/luctus_propblacklist.zip","images/luctus_propblacklist.png"],
                     ["Luctus Jobranks","A fast jobranksystem that simply works and is easy to configure","files/luctus_jobranks.zip","images/luctus_jobranks.png"],
-                    ["Lucid Chat","A simple chatbox with previous-message features and tab-to-advert shortcut","files/lucid_chat.zip","images/lucid_chat.png"],
+                    ["Luctus Chat","A simple chatbox with previous-message features and tab-to-advert shortcut","files/luctus_chat.zip","images/luctus_chat.png"],
+                    ["Luctus Char","Character menu which can also have a picture in the background","files/luctus_char.zip","images/luctus_char.png"],
                     ["Luctus MOTD","A window that opens when you join the server, made to display rules and other links","files/luctus_motd.zip","images/luctus_motd.png"],
                     ["Luctus F4menu","A simple, one-file F4 menu that just works","files/luctus_f4menu.zip","images/luctus_f4menu.png"],
                     ["Luctus Warn","A warning system that should be enough for everyone","files/luctus_warn.zip","images/luctus_warn.png"],
