[luctus] Added 6 new addons

--- a/luctus_at/darkrp.html
+++ b/luctus_at/darkrp.html
@@ -176,6 +176,7 @@
                     ["Luctus Scoreboard","An optimized Scoreboard that features ULX support via rightclick","files/luctus_scoreboard.zip","images/luctus_scoreboard.png"],
                     ["Luctus Logs","An easy and efficient logging system. Features filtering and gmodadminsuite logging modules support","files/luctus_logs.zip","images/luctus_logs.png"],
                     ["Luctus HUD","A simple, fully functional HUD with ammo display and agenda support","files/luctus_hud.zip","images/luctus_hud.png"],
+                    ["Luctus Performance","Overwriting default gmod code for better performance, giving a 10x boost serverside and ~40FPS clientside! (Warning: This removes swimming and noclip animations)","files/luctus_performance.zip","images/luctus_performance.png"],
                     ["Luctus Propblacklist","A handpicked 1000+ props blacklist. Contains HL2, Gmod and CSS props that users could use to troll","files/luctus_propblacklist.zip","images/luctus_propblacklist.png"],
                     ["Luctus Jobranks","A fast jobranksystem that simply works and is easy to configure","files/luctus_jobranks.zip","images/luctus_jobranks.png"],
                     ["Luctus Chat","A simple chatbox with previous-message features and tab-to-advert shortcut","files/luctus_chat.zip","images/luctus_chat.png"],
@@ -185,6 +186,8 @@
                     ["Luctus Warn","A warning system that should be enough for everyone","files/luctus_warn.zip","images/luctus_warn.png"],
                     ["Luctus Radio","A non-lagging and optimized radio where players can choose their own frequency","files/luctus_radio.zip","images/luctus_radio.png"],
                     ["Luctus Whitelist","A free and simple whitelist addon for e.g. SCPRP servers","files/luctus_whitelist.zip","images/luctus_whitelist.png"],
+                    ["Luctus Watchlist","Add a message to players that displays in chat when they join","files/luctus_watchlist.zip","images/luctus_watchlist.png"],
+                    ["Luctus Popups","Very similar to admin_popups, it gives you a 'ticket' in the top left corner if someone writes in admin (@) chat","files/luctus_popups.zip","images/luctus_popups.png"],
                     ["Luctus Technician","A darkrp-city-worker replacement addon that is free and a simple money-making job","files/luctus_technician.zip","images/luctus_technician.png"],
                     ["Luctus Emote","An emote weapon that features a list of emotes to choose from, also shows you if you are currently emoting","files/luctus_emote.zip","images/luctus_emote.png"],
                     ["Luctus FPS Boost","A very simple fps boost window in a single cl lua file","files/luctus_fps_boost.zip","images/luctus_fpsboost.png"],
@@ -196,7 +199,6 @@
                     ["Luctus Skills","Ingame skills for more damage, more resistance, etc.","files/luctus_skills.zip","images/luctus_skills.png"],
                     ["Luctus Serverstatus","A small status page ingame, for a web version please checkout 'istina' on my github","files/luctus_serverstatus.zip","images/luctus_serverstatus.png"],
                     ["Luctus Namechange","A simple 'please change your name' window upon first joining the server","files/luctus_namechange.zip","images/luctus_namechange.png"],
-                    ["Lucid Chocolate Maker","A simple re-programmed job from a darkrp server, features a money-farming job","files/lucid_chocolate_maker.zip","images/lucid_chocolate_maker.png"],
                     ["Luctus Medic","(unfinished) Very basic medic mod where you have to wait until you can respawn","files/luctus_medic.zip","images/luctus_medic.png"],
                     ["Luctus NLR","A NLR zone for players if they die","files/luctus_nlr.zip","images/luctus_nlr.png"],
                     ["Luctus Crashscreen","Auto reconnects players after a server crash","files/luctus_crashscreen.zip","images/luctus_crashscreen.png"],
