--- a/luctus_at/scprp.html
+++ b/luctus_at/scprp.html
@@ -194,7 +194,9 @@
                     ["Luctus Amnestics","A simple syringe that displays text on a players screen while enabling various amounts of motion blur","files/luctus_amnestics.zip","images/luctus_amnestics.png"],
                     ["Luctus Breach","Let's players escape their cells after 30min, can be configured to need admin approval","files/luctus_breach.zip","images/luctus_breach.png"],
                     ["Luctus Airsoft","Changes your bullets to be non-lethal, only incapacitating players for 10 seconds and works with every gun","files/luctus_airsoft.zip","images/luctus_airsoft.mp4"],
-                    
+                    ["Luctus SCP NLR","Gives players an NLR box at the top of the screen which also gets logged when it will end for admins to check. (It does NOT create a 'do not enter' bubble where the player died)","files/luctus_snlr.zip","images/luctus_snlr.png"],
+                    ["Luctus Disguise","Lets a player disguise by changing their job, jobrank and playermodel (supports tbfy and luctus jobranks)","files/luctus_disguise.zip","images/luctus_disguise.png"],
+                    ["Luctus Notepad","Players can write text on a notepad and show it to others","files/luctus_notepad.zip","images/luctus_notepad.png"],
                 ];
                 addons.forEach(function(v,k){
                     AddSection(v[0],v[1],v[2],v[3],(k%2==1)?true:false);
