--- a/luctus_at/book.html
+++ b/luctus_at/book.html
@@ -95,11 +95,11 @@
                             <ul class="statistics">
                                 <li class="luctusBlock">
                                     <span class="icon solid fa-bug"></span>
-                                    <strong>41</strong> Exploits
+                                    <strong>58</strong> Exploits
                                 </li>
                                 <li class="luctusBlock">
                                     <span class="icon solid fa-grip-lines"></span>
-                                    <strong>765</strong> Lines of code only
+                                    <strong>1021</strong> Lines of code only
                                 </li>
                                 <li class="luctusBlock">
                                     <span class="icon solid fa-eye-slash"></span>
@@ -107,11 +107,11 @@
                                 </li>
                                 <li class="luctusBlock">
                                     <span class="icon solid fa-hands-helping"></span>
-                                    <strong>71</strong> Servers helped
+                                    <strong>∞</strong> Servers helped
                                 </li>
                                 <li class="luctusBlock">
                                     <span class="icon solid fa-clock"></span>
-                                    <strong>13.08.2023</strong> Last updated
+                                    <strong>16.10.2023</strong> Last updated
                                 </li>
                             </ul>
                         </section>
