--- a/luctus_at/darkrp.html
+++ b/luctus_at/darkrp.html
@@ -172,6 +172,9 @@
                     
                 }
                 let addons = [
+                    ["Luctus Proficiency","Get Weapon-specific XP for hits and kills which display your weaponlevel on your right hand ingame","files/luctus_proficiency.zip","images/luctus_proficiency.png"],
+                    ["Luctus Camera","Place cameras over the map and see what happens from their view","files/luctus_camera.zip","images/luctus_camera.png"],
+                    ["Luctus Quests","Create quests (daily or one-time) that can reward XP, job unlocks, money or anything you want","files/luctus_quests.zip","images/luctus_quests.png"],
                     ["Luctus Config","A simple ingame config window for any and all addons","files/luctus_config.zip","images/luctus_config.png"],
                     ["Luctus Scoreboard","An optimized Scoreboard that features ULX support via rightclick","files/luctus_scoreboard.zip","images/luctus_scoreboard.png"],
                     ["Luctus Logs","An easy and efficient logging system. Features filtering and gmodadminsuite logging modules support","files/luctus_logs.zip","images/luctus_logs.png"],
