--- a/luctus_at/scprp.html
+++ b/luctus_at/scprp.html
@@ -184,7 +184,7 @@
                     ["Luctus SCP Names","A window whenever you change jobs to set your job-name (saves after change)","files/luctus_scp_names.zip","images/luctus_scp_names.png"],
                     ["Luctus Research","An SCPRP addon for researchers to write down notes","files/luctus_research.zip","images/luctus_research.png"],
                     ["Luctus Jobnumbers","Give Jobs a name-prefix with random numbers. Can be set with !setid <name> <number>.","files/luctus_jobnumbers.zip","images/luctus_jobnumbers.png"],
-                    ["Custom Lootsystem","Loot entities for weapons or entities. Shows when it can next be looted","files/lootsystem.zip","images/lootsystem.mp4"],
+                    ["Luctus Lootsystem","Loot entities for weapons or entities. Shows when it can next be looted","files/luctus_lootsystem.zip","images/luctus_lootsystem.mp4"],
                     ["Luctus Intercom","Everyone on the map hears you in 2D if you get close to an intercom","files/luctus_intercom.zip","images/luctus_intercom.mp4"],
                     ["Luctus SCP Management","Ban players from jobs, set the scp code or enable emergency jobs","files/luctus_scp_mgmt.zip","images/luctus_scp_mgmt.mp4"],
                     ["Luctus SCP HUD","A simple HUD for SCPRP","files/luctus_shud.zip","images/luctus_shud.png"],
