--- a/luctus_at/scprp.html
+++ b/luctus_at/scprp.html
@@ -177,6 +177,7 @@
                     ["Luctus SCP 173","You can only move if nobody looks at you. Everyone near you starts blinking. Kill instantly with LMB (+Open doors with RMB)","files/scp_173.zip","images/scp_173.mp4"],
                     ["Luctus SCP 049","Kill, revive and open doors with LMB. Mix your cure with RMB and revive players with special zombie effects or find the perfect cure and revive them as a normal human being","files/scp_049.zip","images/scp_049.mp4"],
                     ["Luctus SCP 096","If players look into your face you enrage and one-hit-kill everyone near you. You can see your targets through walls. Press RMB to cry (or scream while enraged). Open doors with LMB, even while not enraged.","files/scp_096.zip","images/scp_096.mp4"],
+                    ["Luctus SCP 939","Your vision is barely working, everything is dark. If you press Reload you can see better for a short time. You only see players who move/talk/shoot. Rightclick is a special ability that shows you nearby players.","files/scp_939.zip","images/scp_939.mp4"],
                     ["Luctus SCP 966","Slow players by looking at them. LMB to make them sleep, LMB to kill, eat and heal from sleeping players (+Open doors with RMB)","files/scp_966.zip","images/scp_966.mp4"],
                     ["Luctus Activityplan","An activity plan for d-class players","files/luctus_activityplan.zip","images/luctus_activityplan.png"],
                     ["Luctus Code","A small box in the top right showing the current code (red,yellow,green)","files/luctus_code.zip","images/luctus_code.png"],
