[luctus] Updated 3 addons

--- a/luctus_at/darkrp.html
+++ b/luctus_at/darkrp.html
@@ -191,7 +191,7 @@
                     ["Luctus Whitelist","A free and simple whitelist addon for e.g. SCPRP servers","files/luctus_whitelist.zip","images/luctus_whitelist.png"],
                     ["Luctus Watchlist","Add a message to players that displays in chat when they join","files/luctus_watchlist.zip","images/luctus_watchlist.png"],
                     ["Luctus Popups","Very similar to admin_popups, it gives you a 'ticket' in the top left corner if someone writes in admin (@) chat","files/luctus_popups.zip","images/luctus_popups.png"],
-                    ["Luctus Technician","A darkrp-city-worker replacement addon that is free and a simple money-making job","files/luctus_technician.zip","images/luctus_technician.png"],
+                    ["Luctus Technician","A darkrp-city-worker replacement addon that is free and a simple money-making job. Solve a minigame to repair and gain money","files/luctus_technician.zip","images/luctus_technician.png"],
                     ["Luctus Emote","An emote weapon that features a list of emotes to choose from, also shows you if you are currently emoting","files/luctus_emote.zip","images/luctus_emote.png"],
                     ["Luctus FPS Boost","A very simple fps boost window in a single cl lua file","files/luctus_fps_boost.zip","images/luctus_fpsboost.png"],
                     ["Luctus Doorhud","Changes the buymenu and doordisplay to look better than default","files/luctus_doorhud.zip","images/luctus_doorhud.png"],
