--- a/luctus_at/scprp.html
+++ b/luctus_at/scprp.html
@@ -198,6 +198,8 @@
                     ["Luctus SCP NLR","Gives players an NLR box at the top of the screen which also gets logged when it will end for admins to check. (It does NOT create a 'do not enter' bubble where the player died)","files/luctus_snlr.zip","images/luctus_snlr.png"],
                     ["Luctus Disguise","Lets a player disguise by changing their job, jobrank and playermodel (supports tbfy and luctus jobranks)","files/luctus_disguise.zip","images/luctus_disguise.png"],
                     ["Luctus Buildtablet","Build destroyable props that have a custom delay before becoming solid","files/luctus_buildtablet.zip","images/luctus_buildtablet.mp4"],
+                    ["Luctus Washsaloon","Wash clothes to get money","files/luctus_washsaloon.zip","images/luctus_washsaloon.png"],
+                    ["Luctus Scrapsystem","Collect trash to trade in for weapons","files/luctus_scrapsystem.zip","images/luctus_scrapsystem.png"],
                     ["Luctus Notepad","Players can write text on a notepad and show it to others","files/luctus_notepad.zip","images/luctus_notepad.png"],
                 ];
                 addons.forEach(function(v,k){
