[luctus] Updated artist's name and display

--- a/luctus_at/istina.html
+++ b/luctus_at/istina.html
@@ -67,6 +67,8 @@
                         <h1 class="major">istina | gmod statistics</h1>
                         <section>
                             <img style="max-width:100%" src="images/istina_banner.png">
+                            <span style="font-size:0.8em;color:white;">istina banner and logo drawn by: <b>delusion.l</b> (@discord)</span>
+                            <br><br>
                         </section>
                         <hr>
                         <br>
