[luctus] Added new darkrp addon (ac_sv)

--- a/luctus_at/darkrp.html
+++ b/luctus_at/darkrp.html
@@ -197,6 +197,7 @@
                     ["Luctus FPS Boost","A very simple fps boost window in a single cl lua file","files/luctus_fps_boost.zip","images/luctus_fpsboost.png"],
                     ["Luctus Doorhud","Changes the buymenu and doordisplay to look better than default","files/luctus_doorhud.zip","images/luctus_doorhud.png"],
                     ["Luctus Anticheat","A very efficient anticheat that catches scriptkiddies","files/luctus_ac.zip","images/luctus_anticheat.png"],
+                    ["Luctus Anticheat Serverside","Secures your server from backdoors and dynamic code execution","files/luctus_ac_sv.zip","images/luctus_anticheat_sv.png"],
                     ["Luctus Antibanevasion","This addon checks if a player is trying to circumvent his ban via vpn, family share or proxy","files/luctus_antibanevasion.zip","images/luctus_antibanevasion.png"],
                     ["Luctus Discord","Send any ingame message to discord easily, from monitoring to ingame chat","files/luctus_discord.zip","images/luctus_discord.png"],
                     ["Luctus Leaderboard","Easily extendable ingame leaderboard for money,playtime,etc.","files/luctus_leaderboard.zip","images/luctus_leaderboard.png"],
