[luctus] Update book.html

--- a/luctus_at/book.html
+++ b/luctus_at/book.html
@@ -72,20 +72,25 @@
                         <section>
                             <h2>Features</h2>
                             <div class="row">
-                                <div class="col-4 col-12-medium">
-                                    <span class="icon solid major style1 fa-code"></span>
-                                    <h3>Easy Code</h3>
-                                    <p>It should be very simple to extend the script with even more exploits. If you find any please forward them to me so that they can be included here.</p>
+                                <div class="col-3 col-12-medium">
+                                    <span class="icon solid major style5 fa-user-lock"></span>
+                                    <h3>Secure</h3>
+                                    <p>SNTE and other anti-backdoor solutions are not working with luctus' book. Extra checks and safety precautions make it possible to only show actually existing exploits and problems on the server.</p>
                                 </div>
-                                <div class="col-4 col-12-medium">
-                                    <span class="icon major style3 fa-copy"></span>
-                                    <h3>Lightweight</h3>
-                                    <p>Only one file and only one console command makes it very lightweight and thus easy to use even if an anticheat system is present on the server.</p>
-                                </div>
-                                <div class="col-4 col-12-medium">
+                                <div class="col-3 col-12-medium">
                                     <span class="icon major style5 fa-gem"></span>
                                     <h3>Quality</h3>
                                     <p>All exploits were manually found and tested by me. In comparison to older exploit menus luctus' book has only new and working ones that are an active threat.</p>
+                                </div>
+                                <div class="col-3 col-12-medium">
+                                    <span class="icon solid major style3 fa-feather-alt"></span>
+                                    <h3>Lightweight</h3>
+                                    <p>Only one file and only one console command makes it very lightweight and thus easy to use even if an anticheat system is present on the server.</p>
+                                </div>
+                                <div class="col-3 col-12-medium">
+                                    <span class="icon solid major style1 fa-code"></span>
+                                    <h3>Easy Code</h3>
+                                    <p>It should be very simple to extend the script with even more exploits. If you find any please forward them to me so that they can be included here aswell.</p>
                                 </div>
                             </div>
                         </section>
@@ -95,11 +100,11 @@
                             <ul class="statistics">
                                 <li class="luctusBlock">
                                     <span class="icon solid fa-bug"></span>
-                                    <strong>67</strong> Exploits
+                                    <strong>74</strong> Exploits
                                 </li>
                                 <li class="luctusBlock">
                                     <span class="icon solid fa-grip-lines"></span>
-                                    <strong>1171</strong> Lines of code only
+                                    <strong>1263</strong> Lines of code only
                                 </li>
                                 <li class="luctusBlock">
                                     <span class="icon solid fa-eye-slash"></span>
@@ -111,7 +116,7 @@
                                 </li>
                                 <li class="luctusBlock">
                                     <span class="icon solid fa-clock"></span>
-                                    <strong>22.04.2024</strong> Last updated
+                                    <strong>01.09.2024</strong> Last updated
                                 </li>
                             </ul>
                         </section>
